--- a/app.css
+++ b/app.css
@@ -9,6 +9,11 @@ html {
     box-sizing: border-box;
 }
 
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
 body {
     line-height: 1;
     min-height: 100vh;
@@ -24,4 +29,23 @@ body {
     padding: 15px 25px;
     width: 100%;
     max-width: 960px;
+
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.pricing-plan {
+    border-bottom: 1px solid #e1f1ff;
+}
+
+.pricing-plan:last-child {
+    border-bottom: none;
+}
+
+.pricing-img {
+    margin-bottom: 25px;
+    width: 100%;
+    max-width: 100%;
 }
